--- a/WEB/src/main/webapp/index.html
+++ b/WEB/src/main/webapp/index.html
@@ -6,6 +6,25 @@
 </head>
 <body>
 
-<h5>WEB HELLO HTML</h5> 
+	<h5>WEB HELLO HTML</h5>
+	<h4>GET 전송</h4>
+	<!-- 
+	URL로 데이터 전솔
+	파라이터믄 ? 뒤에 파라미터명=파라미터값으로 전송
+	여러 개의 파라미터는 &로 연걸
+	 -->
+	<p>
+		<a href="hs?name=Servlet">HellowServlet</a>
+	</p>
+
+	<h4>post 전송</h4>
+	<!-- 사용자 입력 데이터 전송을 위한 form tag -->
+	<form action="hs" method="POST">
+		<label for="last_name">성</label> 
+		<input type="text" name="last_name" id="last_name" /><br /> 
+		<label for="first_name">이름</label> 
+		<input type="text" name="first_name" id="first_name" /><br />
+		<input type="submit" value="전송" />
+	</form>
 </body>
 </html>
