--- a/WEB/src/main/webapp/index.html
+++ b/WEB/src/main/webapp/index.html
@@ -26,5 +26,8 @@
 		<input type="text" name="first_name" id="first_name" /><br />
 		<input type="submit" value="전송" />
 	</form>
+	S
+	<h4>Emaillist (Model 1)</h4>
+	<p><a href = "/WEB/emaillist/">이메일 리스트 (Model 1)</a></p>
 </body>
 </html>
