--- a/WEB/src/main/webapp/index.html
+++ b/WEB/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 	여러 개의 파라미터는 &로 연걸
 	 -->
 	<p>
-		<a href="hs?name=Servlet">HellowServlet</a>
+		<a href="hs?name=Servlet">HellowServlet 요청</a>
 	</p>
 
 	<h4>post 전송</h4>
@@ -26,7 +26,7 @@
 		<input type="text" name="first_name" id="first_name" /><br />
 		<input type="submit" value="전송" />
 	</form>
-	S
+
 	<h4>Emaillist (Model 1)</h4>
 	<p><a href = "/WEB/emaillist/">이메일 리스트 (Model 1)</a></p>
 </body>
